Starter, Setup  wizards looks better - vertical aligned, smaller paddings, ... Bugfix 5017 - The Starter Sites selection form in the setup wizard is too long

--- a/Website/Composite/styles/default/splash.less
+++ b/Website/Composite/styles/default/splash.less
@@ -1,33 +1,37 @@
 .splash-cover {
     overflow: auto;
-    position: relative;
     font-size: 16px;
 
     .logo {
         width: 138px;
         height: 38px;
         background: url("@{images-root-path}/logo.png") no-repeat 0 0;
-        margin: 0 auto 40px auto;
+        margin: 20px auto 40px auto;
     }
 
     .splash {
-        position: relative;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
         z-index: 3;
         display: block;
         width: 312px;
-        margin: 10% auto 0 auto;
         -ms-border-radius: 15px;
         border-radius: 15px;
         background: #fff;
     }
 
     .splash-inner {
-        padding: 30px 30px 40px 30px;
+        padding: 10px 30px 25px 30px;
     }
 
     h1 {
         border-bottom: solid 1px #E1E1E1;
         padding-bottom: 10px;
+        margin: 10px 0;
     }
 
     a, a:focus, a:active {
@@ -35,10 +39,10 @@
         cursor: pointer;
     }
 
-    a:hover {
-        color: #04A380;
-        text-decoration: underline;
-    }
+        a:hover {
+            color: #04A380;
+            text-decoration: underline;
+        }
 
     .clickbutton {
         display: block;
